fix 3 columns layout problem in Chrome

--- a/share/css/default/src/layout.css
+++ b/share/css/default/src/layout.css
@@ -107,7 +107,7 @@ div.twoColumnLayout.fibonacci-3-2 div.layoutColumnTwo.ofTwo {width: 40%;}
 div.threeColumnLayout {clear: both;}
 div.threeColumnLayout div.layoutColumnOne.ofThree, 
 div.threeColumnLayout div.layoutColumnTwo.ofThree, 
-div.threeColumnLayout div.layoutColumnThree.ofThree {width: 33.334%; overflow: hidden;}
+div.threeColumnLayout div.layoutColumnThree.ofThree {width: 33.3334%; overflow: hidden;}
 div.threeColumnLayout div.layoutColumnOne.ofThree, 
 div.threeColumnLayout div.layoutColumnTwo.ofThree {float: left;}
 div.threeColumnLayout div.layoutColumnThree.ofThree {float: right;}
